# Drum-Extractor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bootstrap.sh  install.bat  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: development.md  tab-roadmap.md
drum_extractor/: __init__.py  __main__.py  bank.py  bass.py  cli.py  config.py  doctor.py  drums.py  ensemble.py  errors.py  events.py  gm_drum_map.py  gp_export.py  guitar.py  kick.py  logging_utils.py  midi_io.py  notation.py  pipeline.py  quantize.py  separation.py  sonify.py  tabs.py
drum_extractor/web/: __init__.py  server.py
drum_extractor/web/templates/: index.html  mixer.html
examples/: README.md  demo_notation.py  demo_riff.py
tests/: test_audit_regressions.py  test_backlog_fixes.py  test_bank.py  test_bass_tab.py  test_doctor.py  test_ensemble.py  test_events.py  test_full_audit.py  test_gm_drum_map.py  test_import_and_deps.py  test_improvements.py  test_integration_fallback.py  test_kick_booster.py  test_notation.py  test_oss_comparison_fixes.py  test_polish.py  test_quantize.py  test_separation_plumbing.py  test_sonify.py  test_tabs.py  test_web.py
